# valius

./: CMakeLists.txt
include/valius/: alpha.h  encodeURI.h  isASCII.h  isAlpha.h  isBIC.h  isBase32.h  isBase64.h  isBoolean.h  isCreditCard.h  isDecimal.h  isDivisibleBy.h  isEmail.h  isEmpty.h  isFQDN.h  isFloat.h  isFullWidth.h  isHalfWidth.h  isHash.h  isHexColor.h  isHexademical.h  isIP.h  isIPRange.h  isISBN.h  isISIN.h  isISO3166Alpha2.h  isISO3166Alpha3.h  isISO8601.h  isISRC.h  isISSN.h  isIdentityCard.h  isInt.h  isIs.h  isJSON.h  isJWT.h  isLatLong.h  isLength.h  isLowercase.h  isMD5.h  isMIMEType.h  isMacAddress.h  (+15 more)
src/: alpha.cc  encodeURI.cc  isASCII.cc  isAlpha.cc  isBIC.cc  isBase32.cc  isBase64.cc  isBoolean.cc  isByteLength.cc  isCreditCard.cc  isDecimal.cc  isDivisibleBy.cc  isEmail.cc  isEmpty.cc  isFQDN.cc  isFloat.cc  isFullWidth.cc  isHalfWidth.cc  isHash.cc  isHexColor.cc  isHexademical.cc  isIP.cc  isIPRange.cc  isISBN.cc  isISIN.cc  isISO3166Alpha2.cc  isISO3166Alpha3.cc  isISO8601.cc  isISRC.cc  isISSN.cc  isIdentityCard.cc  isInt.cc  isIs.cc  isJSON.cc  isJWT.cc  isLatLong.cc  isLength.cc  isLowercase.cc  isMD5.cc  isMIMEType.cc  (+16 more)
tests/: test-alpha.cc  test-isASCII.cc  test-isAlpha.cc  test-isBIC.cc  test-isBase32.cc  test-isBase64.cc  test-isBoolean.cc  test-isCreditCard.cc  test-isDecimal.cc  test-isDivisibleBy.cc  test-isEmail.cc  test-isEmpty.cc  test-isFQDN.cc  test-isFloat.cc  test-isFullWidth.cc  test-isHalfWidth.cc  test-isHash.cc  test-isHexColor.cc  test-isHexademical.cc  test-isIP.cc  test-isIPRange.cc  test-isISBN.cc  test-isISIN.cc  test-isISO3166Alpha2.cc  test-isISO3166Alpha3.cc  test-isISO8601.cc  test-isISRC.cc  test-isISSN.cc  test-isIdentityCard.cc  test-isInt.cc  test-isIs.cc  test-isJSON.cc  test-isJWT.cc  test-isLatLong.cc  test-isLength.cc  test-isLowerCase.cc  test-isMACAddress.cc  test-isMD5.cc  test-isMIMEType.cc  test-isMagnetURI.cc  (+13 more)
